--- a/refundPolicies.html
+++ b/refundPolicies.html
@@ -3,28 +3,32 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Políticas de Reembolso de Likalees</title>
+    <title>Likalees</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Políticas de Reembolso de Likalees" name="keywords">
-    <meta content="Políticas de Reembolso de Likalees" name="description">
+    <meta content="Free Website Template" name="keywords">
+    <meta content="Free Website Template" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
+    <!-- Libraries Stylesheet -->
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.min.css" rel="stylesheet">
-    <style>
+        <style>
         .btn-negro {
-            background-color: #552213;
-            border: 3px;
-            color: white;
+        background-color: #552213;
+        border: 3px; 
+        color: white;
         }
     </style>
 </head>
@@ -33,25 +37,37 @@
     <!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-white navbar-dark py-3">
-            <a href="#">
-                <img src="img/logoFondo.png" alt="LiKaleas" style="width:20%;">
-            </a>
+                <a href="#">
+                    <img src="img/logoFondo.png" alt="LiKaleas" style="width:20%;">
+                </a>
             <button type="button" class="navbar-toggler btn-negro" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                <div class="navbar-nav ml-auto p-4">
+            <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse" >
+                <div class="navbar-nav ml-auto p-4" >
                     <a href="inicio.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
                     <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
+                    <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
                 </div>
             </div>
         </nav>
     </div>
 
-    <!-- Navbar End -->
+    <!-- Page Header Start -->
+    <div class="container-fluid page-header mb-5 position-relative overlay-bottom">
+        <div class="d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5" style="min-height: 400px">
+            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Politicas</h1>
+            <div class="d-inline-flex mb-lg-5">
+                <p class="m-0 text-white"><a class="text-white" href="">Inicio</a></p>
+                <p class="m-0 text-white px-2">/</p>
+                <p class="m-0 text-white">Politicas De Reembolso</p>
+            </div>
+        </div>
+    </div>
+    <!-- Page Header End -->
 
     <!-- Page Content Start -->
     <div class="container mt-5">
