--- a/service.html
+++ b/service.html
@@ -133,7 +133,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/poloHM.jpg" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/poloHM.png" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4>
