--- a/caramelo.html
+++ b/caramelo.html
@@ -48,7 +48,8 @@
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
                     <a href="anuncios.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
-                    <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
+					<a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
+					<a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
                 </div>
             </div>
@@ -80,15 +81,60 @@
                 <h1 class="display-4">Variados</h1>
             </div>
             <div class="row">
-                <div class="col-lg-6 mb-5">
+			<div class="col-lg-6 mb-5" style="padding: 5px;">
+				<div class="row align-items-center">
+					<div class="col-sm-5">
+						<img class="img-fluid mb-3 mb-sm-0" src="img/fresaC.png" alt="">
+					</div>
+					<div class="col-sm-7">
+						<h4><i class="fa fa-truck service-icon"></i>Caramelo De Fresa</h4>
+						<p>6 unidades</p>
+						<p>18 gr.</p>
+						<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/5.00</p>
+					</div>
+					<div class="mt-3" style="margin:auto;">
+						<div class="input-group">
+							<input type="number" class="form-control" placeholder="Cantidad">
+							<div class="input-group-append">
+								<button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-6 mb-5" style="padding: 5px;">
+				<div class="row align-items-center">
+					<div class="col-sm-5">
+						<img class="img-fluid mb-3 mb-sm-0" src="img/fresaC.png" alt="">
+					</div>
+					<div class="col-sm-7">
+						<h4><i class="fa fa-truck service-icon"></i>Caramelo De Fresa</h4>
+						<p>9 unidades</p>
+						<p>30 gr.</p>
+						<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/9.00</p>
+					</div>
+					<div class="mt-3" style="margin:auto;">
+						<div class="input-group">
+							<input type="number" class="form-control" placeholder="Cantidad">
+							<div class="input-group-append">
+								<button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+				<div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/fresaC.png" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/naranjaC.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-truck service-icon"></i>Caramelo De Fresa</h4>
+                            <h4><i class="fa fa-coffee service-icon"></i>Caramelo De Naranja </h4>
+							<p>6 unidades</p>
+							<p>18 gr.</p>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/5.00</p>
                         </div>
-                        <div class="mt-3"style ="margin:auto;" >
+                         <div class="mt-3"style ="margin:auto;" >
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
@@ -105,8 +151,12 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-coffee service-icon"></i>Caramelo De Naranja </h4>
+							<p>9 unidades</p>
+							<p>30 gr.</p>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/9.00</p>
+							
                         </div>
-                                                <div class="mt-3"style ="margin:auto;" >
+                         <div class="mt-3"style ="margin:auto;" >
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
@@ -123,9 +173,53 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-award service-icon"></i>Caramelo De Limon</h4>
+							<p>6 unidades</p>
+							<p>18 gr.</p>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/5.00</p>
                         </div>
                     </div>
-                                            <div class="mt-3"style ="margin:auto;" >
+					<div class="mt-3"style ="margin:auto;" >
+                            <div class="input-group">
+                                <input type="number" class="form-control" placeholder="Cantidad">
+                                <div class="input-group-append">
+                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+                                </div>
+                            </div>
+                     </div>
+                </div>
+				 <div class="col-lg-6 mb-5">
+                    <div class="row align-items-center">
+                        <div class="col-sm-5">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/limonC.png" alt="">
+                        </div>
+                        <div class="col-sm-7">
+                            <h4><i class="fa fa-award service-icon"></i>Caramelo De Limon</h4>
+							<p>9 unidades</p>
+							<p>30 gr.</p>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/9.00</p>
+                        </div>
+                    </div>
+					<div class="mt-3"style ="margin:auto;" >
+                            <div class="input-group">
+                                <input type="number" class="form-control" placeholder="Cantidad">
+                                <div class="input-group-append">
+                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+                                </div>
+                            </div>
+                     </div>
+                </div>
+				<div class="col-lg-6 mb-5">
+                    <div class="row align-items-center">
+                        <div class="col-sm-5">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/mielC.png" alt="">
+                        </div>
+                        <div class="col-sm-7">
+                            <h4><i class="fa fa-table service-icon"></i>Caramelo De Miel </h4>
+                            <p>6 unidades</p>
+							<p>18 gr.</p>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/5.00</p>
+                        </div>
+                                                <div class="mt-3"style ="margin:auto;" >
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
@@ -133,6 +227,7 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
                 </div>
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
@@ -141,8 +236,9 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-table service-icon"></i>Caramelo De Miel </h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                            <p>9 unidades</p>
+							<p>30 gr.</p>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/9.00</p>
                         </div>
                                                 <div class="mt-3"style ="margin:auto;" >
                             <div class="input-group">
@@ -174,8 +270,8 @@
                 <p>Acompañanos en las redes sociales y mantente al tanto de nuestras últimas novedades, promociones y eventos especiales.</p>
                 <div class="d-flex justify-content-start">
 
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-tiktok"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.facebook.com/profile.php?id=61552912798444&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.tiktok.com/@energixcaramelo?_t=8gtXomKHgqE&_r=1 "><i class="fab fa-tiktok"></i></a>
 
                 </div>
             </div>
