--- a/drink.html
+++ b/drink.html
@@ -48,7 +48,8 @@
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
                     <a href="anuncios.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
-                    <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
+					<a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
+					<a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
                 </div>
             </div>
@@ -86,7 +87,10 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/drinkE.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-truck service-icon"></i>Bebida De </h4>
+                            <h4><i class="fa fa-truck service-icon"></i>Energix - Drink De Fresa</h4>
+							<p>Revitaliza tu día con el refrescante sabor y la energía natural de nuestra bebida Enrgix de fresa. ¡Una explosión de vitalidad en cada sorbo</p>
+							<p>500 ml.</p>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/11.00</p>
                         </div>
                         <div class="mt-3"style ="margin:auto;" >
                             <div class="input-group">
@@ -104,9 +108,12 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/drinkE1.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-coffee service-icon"></i>Bebida De </h4>
+                            <h4><i class="fa fa-coffee service-icon"></i>Energix - Drink De Naranja </h4>
+							<p>Despierta tus sentidos con la chispeante frescura cítrica de Enrgix, ¡el impulso de energía en cada gota!.</p>
+							<p>500 ml.</p>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/11.00</p>
                         </div>
-                                                <div class="mt-3"style ="margin:auto;" >
+                        <div class="mt-3"style ="margin:auto;" >
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
@@ -122,7 +129,10 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/drinkE2.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-award service-icon"></i>Bebida De </h4>
+                            <h4><i class="fa fa-award service-icon"></i>Energix - Drink De Limon </h4>
+							<p>Refresca tu día con la chispeante vitalidad cítrica de Enrgix Limón, tu impulso de energía en cada sorbo.</p>
+							<p>500 ml..</p>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/11.00</p>
                         </div>
                     </div>
                                             <div class="mt-3"style ="margin:auto;" >
@@ -174,10 +184,8 @@
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">SÍGANOS</h4>
                 <p>Acompañanos en las redes sociales y mantente al tanto de nuestras últimas novedades, promociones y eventos especiales.</p>
                 <div class="d-flex justify-content-start">
-
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-tiktok"></i></a>
-
+<a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.facebook.com/profile.php?id=61552912798444&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.tiktok.com/@energixcaramelo?_t=8gtXomKHgqE&_r=1 "><i class="fab fa-tiktok"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
