--- a/accessories.html
+++ b/accessories.html
@@ -44,10 +44,11 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse" >
                 <div class="navbar-nav ml-auto p-4" >
-                    <a href="index.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>
+                    <a href="inicio.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
                     <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
+					<a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
                     <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
                 </div>
@@ -86,7 +87,11 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/poloM.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-truck service-icon"></i>Polo De Mujer </h4>
+                            <h4><i class="fa fa-truck service-icon"></i>Polo De Dama </h4>
+							<p>Tallas : XXL XL L M S</p>
+							<p>Manga corta<p/>
+							<p>Manga larga<p/>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/25.00</p>
                         </div>
                         <div class="mt-3"style ="margin:auto;" >
                             <div class="input-group">
@@ -104,9 +109,13 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/poloH.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-coffee service-icon"></i>Polo De Hombre </h4>
+                            <h4><i class="fa fa-coffee service-icon"></i>Polo De Varon </h4>
+							<p>Tallas : XXL XL L M S</p>
+							<p>Manga corta<p/>
+							<p>Manga larga<p/>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/30.00</p>
                         </div>
-                                                <div class="mt-3"style ="margin:auto;" >
+                        <div class="mt-3"style ="margin:auto;" >
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
@@ -123,6 +132,10 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-award service-icon"></i>Polos A Juego </h4>
+							<p>Tallas : XXL XL L M S</p>
+							<p>Manga corta<p/>
+							<p>Manga larga<p/>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/78.00</p>
                         </div>
                     </div>
                                             <div class="mt-3"style ="margin:auto;" >
@@ -141,6 +154,7 @@
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-table service-icon"></i>Sombrero </h4>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/35.00</p>
                             <p class="m-0"></p>
                         </div>
                                                 <div class="mt-3"style ="margin:auto;" >
@@ -159,11 +173,11 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/termoN.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-table service-icon"></i>Termo modelo XX </h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                            <h4><i class="fa fa-table service-icon"></i>Termo Metalico </h4>
+							<p> 1 litro</p>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/15.00</p>
                         </div>
-                                                <div class="mt-3"style ="margin:auto;" >
+                            <div class="mt-3"style ="margin:auto;" >
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
@@ -179,8 +193,9 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/termoC.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-table service-icon"></i>Termo modelo XA </h4>
-                            <p class="m-0"></p>
+                            <h4><i class="fa fa-table service-icon"></i>Termo Encafeinado</h4>
+							<p>700 militros</p>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/12.00</p>
                         </div>
                         <div class="mt-3"style ="margin:auto;" >
                             <div class="input-group">
@@ -198,7 +213,9 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/termoCB.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-table service-icon"></i>Termo modelo XB </h4>
+                            <h4><i class="fa fa-table service-icon"></i>Termo Pareja </h4>
+							<p>500 militros</p>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/35.00</p>
                             <p class="m-0"></p>
                         </div>
                                                 <div class="mt-3"style ="margin:auto;" >
@@ -217,7 +234,8 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/gorroM.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-table service-icon"></i>Gorro </h4>
+                            <h4><i class="fa fa-table service-icon"></i>Gorro De Dama</h4>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/10.00</p>
                         </div>
                         <div class="mt-3"style ="margin:auto;" >
                             <div class="input-group">
@@ -235,7 +253,8 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/gorroH.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-table service-icon"></i>Gorro </h4>
+                            <h4><i class="fa fa-table service-icon"></i>Gorro De Varon </h4>
+							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/10.00</p>
                         </div>
                         <div class="mt-3"style ="margin:auto;" >
                             <div class="input-group">
@@ -267,8 +286,8 @@
                 <p>Acompañanos en las redes sociales y mantente al tanto de nuestras últimas novedades, promociones y eventos especiales.</p>
                 <div class="d-flex justify-content-start">
 
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-tiktok"></i></a>
+                <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.facebook.com/profile.php?id=61552912798444&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.tiktok.com/@energixcaramelo?_t=8gtXomKHgqE&_r=1 "><i class="fab fa-tiktok"></i></a>
 
                 </div>
             </div>
